# english-logic

./: CMakeLists.txt  EnglishLogicConfig.hpp.in  README.md
include/: Dictionary.hpp  Globals.hpp  Logger.hpp  Record.hpp  String.hpp
src/: Dictionary.cpp  Logger.cpp  Record.cpp  String.cpp  main.cpp
